welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
	else if ( (day == 0) || (day == 6) && (vacation) ) { return "off" }
             ^